--- a/201906/201906.md
+++ b/201906/201906.md
@@ -14,3 +14,73 @@
 ### 性能的区别
 
 delegate运行成本低，block成本很高。block出栈需要将使用的数据从栈内存拷贝到堆内存，当然对象的话就是加计数，使用完或者block置nil后才消除；delegate只是保存了-一个对象指针，直接回调，没有额外消耗。相对C的函数指针，只多做了一个查表动作。
+
+## 2. Autoreleasepool中的对象什么时候释放，及底层实现原理
+以`main`函数为例：
+```
+int main(int argc, char * argv[]) {
+@autoreleasepool {
+return UIApplicationMain(argc, argv, nil, NSStringFromClass([AppDelegate class]));
+}
+}
+```
+转化成`C++`代码：
+```
+int main(int argc, char * argv[]) {
+/* @autoreleasepool */ { __AtAutoreleasePool __autoreleasepool; 
+return UIApplicationMain(argc, argv, __null, NSStringFromClass(((Class (*)(id, SEL))(void *)objc_msgSend)((id)objc_getClass("AppDelegate"), sel_registerName("class"))));
+}
+}
+```
+而`__AtAutoreleasePool`为结构体，包含一个构造函数和析构函数：
+```
+struct __AtAutoreleasePool {
+__AtAutoreleasePool() {atautoreleasepoolobj = objc_autoreleasePoolPush();}
+~__AtAutoreleasePool() {objc_autoreleasePoolPop(atautoreleasepoolobj);}
+void * atautoreleasepoolobj;
+};
+```
+`objc_autoreleasePoolPush()`和`objc_autoreleasePoolPop`定义在`NSObject.mm`中：
+```
+void *
+objc_autoreleasePoolPush(void) {
+return AutoreleasePoolPage::push();
+}
+
+void
+objc_autoreleasePoolPop(void *ctxt) {
+AutoreleasePoolPage::pop(ctxt);
+}
+```
+所以，`AtoreleasePool`的核心就是`AutoreleasePoolPage`，通过源码可以知道：
+* `AutoreleasePool`并没有特定的内存结构，它是通过以`AutoreleasePoolPage`为节点的双向链表。
+* 每一个`AutoreleasePoolPage`节点是一个堆栈结，且大小为4096个字节。 
+* 一个`AutoreleasePoolPage`节点对应着一个线程，属于一一对应关系。
+
+##### 扩展
+* Q: `AutoreleasePool`会在每次`runloop`开始前重新创建吗？
+A:  不会，`AutoreleasePool`与线程是一一对应的，`runloop`开始调用`objc_autoreleasePoolPush()`主要生成一个`AutoreleasePoolPage *page`这么一个双向链表的`page`，第一次循环从线程局部存储(`TLS`)通过常量key去获得是否存储过`page（tls_get_direct(key)）`， 获取当前`page`，没有的话创建`page`并存储在`tls`中`（tls_set_direct(key, (void *)page);）`若有`page`直接取出使用。
+* 子线程`autoreleasePool`
+通过在子线程代码试验和相关文章，`page`最终的销毁是在线程销毁的时候执行 `tls_dealloc`方法， 里面的一个操作就是清理`tls`存储的值包括`page`,说明`page`是和线程生命周期相关的结合tls线程局部存储来实现，每次循环结束时只做清理加入进`pool`的对象。
+* 释放时机
+```
+{
+NSMutableArray *arr = [NSMutableArray array];
+NSLog(@"%lu", _objc_rootRetainCount(arr));
+_objc_autoreleasePoolPrint();
+}
+
+@autoreleasepool {
+NSMutableArray *arr = [NSMutableArray array];
+NSLog(@"%lu", _objc_rootRetainCount(arr));
+_objc_autoreleasePoolPrint();
+}
+```
+第一段代码并没加入进`pool`池，第二段加入进池了, 原因在于第一段代码在`ARC`下通过`objc_retainAutoreleasedReturnValue`和`objc_retainAutoreleaseReturnValue`函数的协作，可以不将对象注册到`autoreleasePool`中而直接传递，这一过程达到最优化。从上面的代码我们可以知道，使用`new`、`alloc`这样的方法创建的对象实例是不会进入`autoreleasePool`的，但是使用简便方法创建的对象如`[NSMutableArray array]`是会进入自动缓存池的。
+
+##### 参考链接：
+* [AutoreleasePool底层实现原理](https://www.jianshu.com/p/50bdd8438857)
+* [Autoreleasepool的实现](https://juejin.im/post/5c761d57f265da2da15dcbc3)
+* [源码解读](https://www.jianshu.com/p/ca7835b41699)
+* [子线程AutoRelease对象何时释放](https://suhou.github.io/2018/01/21/带着问题看源码----子线程AutoRelease对象何时释放/?nsukey=vuwWSG1N5oe0ZoT%2F3rEMKU%2Fnm6r1m0rgkc3I3ng4io9j7S%2BBxk%2FlyOV6CrrabsbiX3Njoq6TJtzcjGOAhcPItJHebiQu1GkRpnD8c3IzmszuE6hYvIp790BXYeVTBeWUuCpERgT8kZ8RMCa%2Bcxc9gQeeMroNOB2u3BxlOGWZnKnW1q0cHW%2FmbgtvxyP7BcUub8toh1NYmLispdXI3mhXpw%3D%3D)
+* [黑幕背后的Autorelease](http://blog.sunnyxx.com/2014/10/15/behind-autorelease/)
